[gd_scene load_steps=9 format=3 uid="uid://poirescue1"]

[ext_resource type="Script" path="res://scripts/POIRescue.gd" id="1_poi"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_zone"]
radius = 10.0
height = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_building"]
albedo_color = Color(0.8, 0.5, 0.2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_building"]
material = SubResource("StandardMaterial3D_building")
size = Vector3(1.5, 3.0, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ring"]
transparency = 1
albedo_color = Color(0, 1, 0, 0.5)
emission_enabled = true
emission = Color(0, 1, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="TorusMesh" id="TorusMesh_ring"]
material = SubResource("StandardMaterial3D_ring")
inner_radius = 9.8
outer_radius = 10.0

[sub_resource type="BoxMesh" id="BoxMesh_bar_bg"]
size = Vector3(2, 0.2, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_bar_fill"]
size = Vector3(2, 0.2, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_green"]
albedo_color = Color(0, 1, 0, 1)

[node name="POIRescue" type="Node3D"]
script = ExtResource("1_poi")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 1
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_zone")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_building")

[node name="RingVisual" type="MeshInstance3D" parent="."]
mesh = SubResource("TorusMesh_ring")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
billboard = 1
text = "RESCUE"
font_size = 48

[node name="BarRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
visible = false

[node name="BarBG" type="MeshInstance3D" parent="BarRoot"]
mesh = SubResource("BoxMesh_bar_bg")

[node name="BarFill" type="MeshInstance3D" parent="BarRoot"]
mesh = SubResource("BoxMesh_bar_fill")
surface_material_override/0 = SubResource("StandardMaterial3D_green")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
